@@ -267,7 +267,9 @@ withminimums = PING
 #   RRA:(AVERAGE|MIN|MAX):0.5:24:row3
 #   RRA:(AVERAGE|MIN|MAX):0.5:288:row4
 # The rows are defined by the four resolution values.
+# The default results in RRD files that are 20K to 75K in size:
 #resolution = 600 700 775 797
+# These values keep many more data points, but result in much larger files:
 #resolution = 17280 17520 32850 1095
 # Specify resolution for specific hosts and services.
 #resolutions = HOST,SERVICE,.*=17280 17520 32850 1095;.*,.*,.*=600 700 775 797
